--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: CrateUI
 main: CrateUI\Main
-api: [3.0.0-ALPHA9, 3.0.0-ALPHA10]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12, 3.0.0-ALPHA13, 3.0.0-ALPHA14, 3.0.0-ALPHA15, 3.0.0-ALPHA16, 3.0.0-ALPHA17, 3.0.0-ALPHA18, 3.0.0-ALPHA19, 3.0.0-ALPHA20, 3.0.0-ALPHA 21, 3.0.0-FuCkPMMP, 4.0.0, 4.0.0-ALPHA1]
 version: 1.0
 author: xXNiceYT
 
